// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddSvgIconContents with initial state {} 1`] = `
Object {
  "circles": Object {
    "entities": Object {},
    "ids": Array [],
  },
  "icons": Object {
    "entities": Object {
      "atm": Object {
        "content": "<svg><path id=\\"icon\\" fill=\\"#7C7CF0\\"></path></svg>",
        "id": "atm",
      },
      "bank": Object {
        "content": "<svg><path id=\\"icon\\" fill=\\"#7C7CF0\\"></path></svg>",
        "id": "bank",
      },
    },
    "ids": Array [
      "atm",
      "bank",
    ],
  },
  "markers": Object {
    "entities": Object {},
    "ids": Array [],
  },
}
`;

exports[`AddSvgMarkerContents with initial state {} 1`] = `
Object {
  "circles": Object {
    "entities": Object {},
    "ids": Array [],
  },
  "icons": Object {
    "entities": Object {},
    "ids": Array [],
  },
  "markers": Object {
    "entities": Object {
      "atm": Object {
        "content": "<svg><path id=\\"icon\\" fill=\\"#7C7CF0\\"></path></svg>",
        "id": "atm",
      },
      "bank": Object {
        "content": "<svg><path id=\\"icon\\" fill=\\"#7C7CF0\\"></path></svg>",
        "id": "bank",
      },
    },
    "ids": Array [
      "atm",
      "bank",
    ],
  },
}
`;

exports[`Reset with initial state {"markers":{"ids":["atm","bank"],"entities":{"atm":{"id":"atm","content":"<svg><path id=\\"icon\\" fill=\\"#7C7CF0\\"></path></svg>"},"bank":{"id":"bank","content":"<svg><path id=\\"icon\\" fill=\\"#7C7CF0\\"></path></svg>"}}},"icons":{"ids":["atm","bank"],"entities":{"atm":{"id":"atm","content":"<svg><path id=\\"icon\\" fill=\\"#7C7CF0\\"></path></svg>"},"bank":{"id":"bank","content":"<svg><path id=\\"icon\\" fill=\\"#7C7CF0\\"></path></svg>"}}}} 1`] = `
Object {
  "circles": Object {
    "entities": Object {},
    "ids": Array [],
  },
  "icons": Object {
    "entities": Object {},
    "ids": Array [],
  },
  "markers": Object {
    "entities": Object {},
    "ids": Array [],
  },
}
`;
